@@ -1,10 +1,3 @@
-BEGIN {
-    if( $ENV{PERL_CORE} ) {
-        chdir '../lib/Archive/Tar' if -d '../lib/Archive/Tar';
-    }       
-    use lib '../../..';
-}
-
 BEGIN { chdir 't' if -d 't' }
 
 use Test::More 'no_plan';
@@ -30,36 +23,43 @@ for my $index ( \0, 0 .. $#Expect ) {
     my %opts    = ();
     my @expect  = ();
     
+    my $dotest = sub {
+	my $desc = shift;
+	my $next = $Class->iter( $File, 0, \%opts );
+	
+	my $pp_opts = join " => ", %opts;
+	ok( $next,                  "Iterator created from $File ($pp_opts $desc)" );
+	isa_ok( $next, "CODE",      "   Iterator $desc" );
+
+	my @names;
+	while( my $f = $next->() ) {
+	    ok( $f,                 "       File object retrieved $desc" );
+	    isa_ok( $f, $FClass,    "           Object $desc" );
+
+	    push @names, $f->name;
+	}
+	
+	is( scalar(@names), scalar(@expect),
+				    "   Found correct number of files $desc" );
+	
+	my $i = 0;
+	for my $name ( @names ) {
+	    ok( 1,                  "   Inspecting '$name'  $desc" );
+	    like($name, $expect[$i],"       Matches $Expect[$i] $desc" );
+	    $i++;
+	}        
+    };
+
     ### do a full test vs individual filters
     if( not ref $index ) {
         my $regex       = $Expect[$index];
-        $opts{'filter'} = $regex;
         @expect         = ($regex);
+	%opts		= ( filter => $regex );
+	$dotest->("filter $regex");
+	%opts		= ( filter_cb => sub { my ($entry) = @_; $entry->name() =~ /$regex/ } );
+	$dotest->("filter_cb $regex");
     } else {
         @expect         = @Expect;
-    }        
-
-    my $next = $Class->iter( $File, 0, \%opts );
-    
-    my $pp_opts = join " => ", %opts;
-    ok( $next,                  "Iterator created from $File ($pp_opts)" );
-    isa_ok( $next, "CODE",      "   Iterator" );
-
-    my @names;
-    while( my $f = $next->() ) {
-        ok( $f,                 "       File object retrieved" );
-        isa_ok( $f, $FClass,    "           Object" );
-
-        push @names, $f->name;
-    }
-    
-    is( scalar(@names), scalar(@expect),
-                                "   Found correct number of files" );
-    
-    my $i = 0;
-    for my $name ( @names ) {
-        ok( 1,                  "   Inspecting '$name' " );
-        like($name, $expect[$i],"       Matches $Expect[$i]" );
-        $i++;
+	$dotest->("all");
     }        
 }
